[package]
name = "test-accounting"
version = "0.1.0"
authors = ["David Bonet <dbmontes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
crossbeam-channel = "0.5.1"
csv = "1.1.6"
decimal-rs = {version = "0.1.12", features = ["serde"]}
eyre = "0.6.5"
serde = {version = "1.0.126", features = ["serde_derive"]}
